--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="title_activity_trip_start">TripStartActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_trip">TripActivity</string>
+    <string name="title_activity_poi">PoiActivity</string>
 </resources>
