--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Gipfl</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_login">Sign in</string>
+    <string name="name_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
     <string name="prompt_user">Username</string>
@@ -15,10 +15,10 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing username
         completions."
     </string>
-    <string name="title_activity_trip_list">TripListActivity</string>
-    <string name="title_activity_trip_start">TripStartActivity</string>
+    <string name="name_activity_trip_list">TripListActivity</string>
+    <string name="name_activity_trip_start">TripStartActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
-    <string name="title_activity_maps">Map</string>
-    <string name="title_activity_trip">TripActivity</string>
-    <string name="title_activity_poi">PoiActivity</string>
+    <string name="name_activity_maps">Map</string>
+    <string name="name_activity_trip">TripActivity</string>
+    <string name="name_activity_poi">PoiActivity</string>
 </resources>
