activer trip + trip liste jetzt von menü aus erreichbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Gipfl</string>
     <string name="action_settings">Settings</string>
+    <string name="action_trip_list">My Trip List</string>
+    <string name="action_active_trip">My Active Trip</string>
     <string name="name_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
