--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
         completions."
     </string>
     <string name="name_activity_trip_list">TripListActivity</string>
+    <string name="name_activity_poi_list"> All Points Of Interest </string>
     <string name="name_activity_trip_start">TripStartActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="by_author">By: %1$s</string>
