--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
     <string name="app_name">Gipfl</string>
+
+    <!-- Menu Strings -->
     <string name="action_settings">Settings</string>
     <string name="action_trip_list">My Trip List</string>
     <string name="action_active_trip">My Active Trip</string>
     <string name="action_all_pois">All Points of Interest</string>
+    <string name="action_log_out">Log out</string>
+
     <string name="name_activity_login">Sign in</string>
     <string name="not_available">Not available</string>
 
@@ -19,15 +23,16 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing username
         completions."
     </string>
-    <string name="name_activity_trip_list">TripListActivity</string>
+
+    <string name="name_activity_trip_list">My Trips</string>
     <string name="name_activity_poi_list"> All Points Of Interest </string>
-    <string name="name_activity_trip_start">TripStartActivity</string>
+    <string name="name_activity_trip_start">Trip Details</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="by_author">By: %1$s</string>
     <string name="start_trip_button">Start this trip!</string>
     <string name="name_activity_maps">Map</string>
-    <string name="name_activity_trip">TripActivity</string>
-    <string name="name_activity_poi">PoiActivity</string>
+    <string name="name_activity_trip">My Active Trip</string>
+    <string name="name_activity_poi">Poi Details</string>
 
     <!-- Strings related to Active Trip -->
     <string name="curr_altitude">Current Altitude: %1$s</string>
@@ -39,4 +44,5 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="stop_rec">Stop recording</string>
+
 </resources>
